# KP

./: CMakeLists.txt
hdr/: CMakeLists.txt
hdr/controller/: BallController.h  BlockController.h  BonusController.h  Controller.h  PlatformController.h
hdr/core/: Game.h  Logic.h  Window.h
hdr/shape/: Ball.h  Block.h  Bonus.h  Platform.h
src/: CMakeLists.txt  main.cpp
src/controller/: BonusController.cpp
src/core/: Game.cpp  Logic.cpp  Window.cpp
src/shape/: Ball.cpp  Block.cpp  Bonus.cpp  Platform.cpp
src/сontroller/: BallController.cpp  BlockController.cpp  PlatformController.cpp
